# robot-studio

./: .gitignore  docker-compose.yml
.github/workflows/: cicd.yml
robot/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
robot/src/robot_bringup/: package.xml  setup.py
robot/src/robot_bringup/launch/: robot_studio.launch.py
robot/src/robot_driver/: setup.py
robot/src/robot_driver/robot_driver/: calibration_node.py
robot/src/robot_sensors/: package.xml  setup.py
robot/src/robot_sensors/robot_sensors/: camera_node.py
robot/src/robot_ui/: package.xml  setup.py
robot/src/robot_ui/robot_ui/: main.py
robot/src/robot_ui/robot_ui/services/: recording_service.py  upload_service.py
robot/src/robot_ui/robot_ui/utils/: __init__.py  api_client.py  camera_subscriber.py  presigned_url_worker.py
robot/src/robot_ui/robot_ui/views/: main_window.py
robot/src/robot_ui/robot_ui/widgets/: __init__.py  calibration_panel.py  camera_preview.py  data_collection.py  dataset_setting.py  sidebar.py  teleop_panel.py  theme.py
server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: main.py
server/app/core/: config.py  security.py
server/app/infra/: database.py  minio.py  s3.py
server/app/models/: __init__.py  user.py
server/app/repositories/: user_repository.py
server/app/schemas/: auth.py  object.py
server/app/services/: auth_service.py  object_service.py
web/: nginx.conf  tsconfig.json
web/src/: App.tsx
web/src/api/: auth.ts  client.ts
web/src/pages/: Auth.css  Login.tsx  Signup.tsx
(+2 files in other folders)
