[project]
name = "robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.8.0",
    "opencv-python>=4.10.0",
    "numpy<2",
]

[tool.uv]
# ROS2 패키지(rclpy, sensor_msgs 등)는 시스템에 설치됨
# 시스템 site-packages 접근 허용
system-site-packages = true
